tdf#100811 Add extra conversion units to ODFF function CONVERT

for full compliance with ODFF1.2.
(UI name of function still is CONVERT_ADD.)

Change-Id: I6b620c35a5be2bb7195ff0e569dfe6c9cf63ad6d